fix: update button styles for improved color and visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ a:hover {
 }
 
 .btn {
-  background-color: var(--secondary-color);
+  background-color: rgba(218, 41, 28, 0.482);
   color: white;
   padding: 0.5rem 1rem;
   border: 1px solid transparent;
@@ -205,7 +205,7 @@ a:hover {
   justify-content: center;
   position: relative;
   background: transparent;
-  color: #aa4a4a;
+  color: var(--secondary-color);
   border: transparent;
 }
 
